# go-compiler

./: CMakeLists.txt  Definitions.h  GoCompiler  README.md  README.txt  concurrentSum_errors.go  main.c  makefile
db/: keywords.db  operators.db
errors/: Errors.c  Errors.h
flex/: flex.l  lex.yy.c  lex.yy.h  test
input/: InputSystem.c  InputSystem.h
lexical/: LexicalAnalyzer.c  LexicalAnalyzer.h  LexicalComponent.c  LexicalComponent.h
symbols/: SymbolsTable.c  SymbolsTable.h
syntactic/: SyntacticAnalyzer.c  SyntacticAnalyzer.h
test/: TestHashTable.c  TestHashTable.h  TestInputSystem.c  TestInputSystem.h  TestRunner.c  TestRunner.h  TestUtils.c  TestUtils.h
util/: HashTable.c  HashTable.h  LinkedList.c  LinkedList.h
